LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract__c/VENDOR_Contract__c.object-meta.xml
<CustomObject>
    <description>Vendor Contracts represent annual agreements or service agreements with vendors. The owner of the record is responsible for negotiation of the renewal.</description>
    <label>Vendor Contract</label>
    <nameField>
        <label>Vendor Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>