LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract__c/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The billing method for the contract.</description>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>