LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract__c/fields/Billing_Target__c.field-meta.xml
<CustomField>
    <fullName>Billing_Target__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - For auto bill contracts, the last 4 digits of the CC being used for billing.</description>
    <inlineHelpText>For auto bill contracts, the last 4 digits of the CC being used for billing.</inlineHelpText>
    <label>Billing Target</label>
    <length>20</length>
    <type>Text</type>
</CustomField>