LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The department assuming the cost of the contract.</description>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departments</valueSetName>
    </valueSet>
</CustomField>