LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The end date of the contract.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>