LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - Active contracts are still in place. Renewed contracts have been renewed (meaning there should be ANOTHER Vendor Contract record). Expired contracts have been cancelled.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>