LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>2020-04-03 - N. Ehrmann - AUTO - The sum of the total from all Vendor Contract Lines.</description>
    <inlineHelpText>The sum of the total from all Vendor Contract Lines.</inlineHelpText>
    <label>Total</label>
    <summarizedField>VENDOR_Contract_Line__c.Total__c</summarizedField>
    <summaryForeignKey>VENDOR_Contract_Line__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>