LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - A Service Agreement is a contract that covers multiple billable engagements, each with its own cost (such as a consultant that bills an hourly rate). A Subscription is regularly billed at the same rate (such as an application like Salesforce).</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Agreement</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>