LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR_Contract__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The Vendor for this contract.</description>
    <label>Vendor</label>
    <referenceTo>VENDOR__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>